@startuml
title US22: I want to grade a student in a CourseEdition
'left to right direction

class US22_IWantToGradeAStudentInACourseEdition {
    +US22_IWantToGradeAStudentInACourseEdition(gradeStudentRepository : GradeStudentRepository, courseEditionEnrollmentRepository : CourseEditionEnrollmentRepository)
    +isStudentEnrolledInCourseEdition(courseEdition : CourseEdition, student : Student): boolean
    +

}

class GradeStudent {
    -grade: double
    -date: String
    +knowGrade()
}

class GradeStudentRepository {
    -gradeStudentList: List<GradeStudent>
    +addGradeToStudent()
    +knowAverageGrade()
    +knowApprovalRate()
}

class Student {
    -_uniqueNumber:int
    -_name:String
    -_NIF:String
    -_phone:String
    -_email:String
    +Student(uniqueNumber: int, name: String, NIF: String, phone: String, email: String, address: Address)
    +isStudentRepeated(students: List<Student>)
    +hasSameUniqueNumber(Student student)
}

class CourseEdition {
    -_programmeEdition: ProgrammeEdition
    -_course: Course
    -_ruc: Teacher
    +CourseEdition(programmeEdition: ProgrammeEdition, course: Course)
    +Equals(objectToCompare: Object)
    +setRuc(Teacher: ruc)
    +whatProgrammeEditionBelongsThisCourseEdition ()
}

class CourseEditionEnrollmentRepository {
    -_courseEditionEnrollments
    +CourseEditionEnrollmentRepository (CourseEditionEnrollmentFactory courseEditionEnrollmentFactory)
    +enrollStudentInACourseEdition (Student student, CourseEdition courseEdition, LocalDate enrollmentDate)
    +isStudentEnrolledInCourseEdition (Student student, CourseEdition courseEdition)
    +findByStudentAndEdition (Student student, CourseEdition courseEdition)
    +numberOfStudentsEnrolledInCourseEdition (CourseEdition courseEdition)
    +removeEnrollment (Student student, CourseEdition courseEdition)
    +enrollStudentInProgrammeCourseEditions (Student student,  List<CourseEdition> courseEditions)
    }


GradeStudent "*" --> "1" Student: belongs
GradeStudent "*" --> "1" CourseEdition: refers to
CourseEdition "1" --> "1" CourseEditionEnrollmentRepository: belongs to

US22_IWantToGradeAStudentInACourseEdition "1" ..> "1\n_gradeStudentRepository    " GradeStudentRepository
GradeStudent "gradeStudentRepository" <-- "1" GradeStudentRepository
US22_IWantToGradeAStudentInACourseEdition "1" ..> "1\n_courseEditionEnrollmentRepository    " CourseEditionEnrollmentRepository
@enduml